# comlab

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  glossary.json  index.html.old  main.py  progress.duckdb  pyproject.toml
.github/workflows/: docker-build.yml
src/app/: __init__.py  config.py  database.py  glossary.py  grading.py  repository.py  schemas.py  selector.py  templates.py  utils.py
src/app/routers/: api.py  practice.py  study.py
static/: index.html  main.js  style.css
templates/: base.html  index.html
templates/partials/: question_wrap.html  study_cards.html
tests/: conftest.py  test_grading.py  test_repository.py  test_routes.py  test_selector.py
