[project]
name = "comlab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.2",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "ollama>=0.6.2",
    "python-multipart>=0.0.20",
    "uvicorn>=0.47.0",
]
